--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -142,6 +142,12 @@
                     type="submit">
                     Update
                 </button>
+                <a href="{% url 'reset_password' %}">
+                    <div class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        type="button">
+                        Change Password
+                    </div>
+                </a>
             </div>
         </form>
     </div>
