--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,7 +10,7 @@
         {% block head_title %}Banking System{% endblock %}
     </title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% block head_extra %}{% endblock %}
     <style>
         footer {
@@ -23,9 +23,9 @@
 
 <body class="bg-indigo-600">
     {% include 'navbar.html' %}
+    {% include 'messages.html' %}
     {% block body %}
     <div class="lg:container lg:mx-auto" id="main">
-        {% include 'messages.html' %}
         {% block content %}
         {% endblock %}
     </div>
