--- a/core/templates/messages.html
+++ b/core/templates/messages.html
@@ -1,6 +1,6 @@
 {% for message in messages %}
 
-<div class="bg-teal-100 border-t-4 border-teal-500 rounded-b text-teal-900 px-4 py-3 shadow-md mt-2" role="alert">
+<!-- <div class="bg-teal-100 border-t-4 border-teal-500 rounded-b text-teal-900 px-4 py-3 shadow-md mt-2" role="alert">
     <div class="flex">
         <div class="py-1"><svg class="fill-current h-6 w-6 text-teal-500 mr-4" xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 20 20">
@@ -12,6 +12,17 @@
             <p class="text-sm">{{ message }}</p>
         </div>
     </div>
-</div>
+</div> -->
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        Swal.fire({
+            icon: '{{ message.tags }}',
+            title: 'Status',
+            text: '{{ message }}',
+            confirmButtonText: 'OK'
+        })
+    })
+</script>
 
 {% endfor %}
